[package]
name = "strapped-contract"
version = "0.1.0"
edition = "2024"

[lib]
name = "strapped_contract"
path = "src/lib.rs"

[features]
default = []

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
fuels = "0.70.0"
ratatui = "0.29.0"
rand = "0.9.2"
tokio = { version = "1.12", features = ["rt", "macros"] }
itertools = "0.10.5"
unicode-width = "0.2.0"
fakeit = "1.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }

[[test]]
name = "integration_tests"
path = "tests/harness.rs"
required-features = ["test-helpers"]
