[workspace]
members = [
    "rust-crates/generated_abi",
    "rust-crates/deployments",
    "rust-crates/deploy-cli",
    "rust-crates/indexer",
    "rust-crates/tui",
    "integration-tests",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"


[workspace.dependencies]
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Fuel Crates
fuels = "0.76.0"
fuel-indexer = { git = "https://github.com/FuelLabs/fuel-rust-indexer", branch = "main" }

# Local Crates
generated_abi = { path = "rust-crates/generated_abi" }

[workspace.dev-dependencies]

[patch.crates-io]
fuels = { git = "https://github.com/FuelLabs/fuels-rs/", branch = "feature/log-id-expose" }
