[package]
name = "indexer"
edition.workspace = true
version.workspace = true

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
generated_abi = { workspace = true }
tokio = { version = "1.48.0", features = ["macros", "rt"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
