[package]
name = "indexer"
edition.workspace = true
version.workspace = true

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
fuels = { workspace = true }
fuel-core = { version = "0.47.1" }
fuel-indexer = { workspace = true, features = ["rocksdb"] }
generated_abi = { workspace = true }
tempdir = "0.3.7"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
url = "2.5.7"
fuel-core-services = "0.47.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio-stream = "0.1.17"
actix-web = "4.9.0"
sled = "0.34.7"

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
