[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[lib]
name = "strapped_contract"
path = "src/lib.rs"

[features]
default = []
test-helpers = ["generated_abi/test-helpers"]

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
fuels = { workspace = true }
ratatui = "0.29.0"
rand = "0.9.2"
tokio = { version = "1.12", features = ["rt", "macros"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rpassword = "7.3"
shellexpand = "3.1"
hex = "0.4"
eth-keystore = "0.5"
futures = "0.3"
generated_abi = { path = "../generated_abi" }
reqwest = { version = "0.12.7", features = ["json"] }

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }
